# logos

./: .gitignore  AGENTS.md  CLAUDE.md  Contributing.md  Debuggers-plan.md  PROJECT_COMPLETION_REPORT.md  QUICK_REFERENCE.md  README.md  SECURITY.md  Tier2-RustWasm-Plan.md  Tier3-AdvancedIntelligence-Plan.md  VISUAL_REFERENCE.md  build.sh  index.html  package-lock.json  package.json  setup.sh  show.txt  tsconfig.json  update.sh  vite.config.ts  vitest.config.ts
.github/workflows/: Check.yml  Release.yml  UpdateVscodeVendor.yml  claude-code-review.yml  claude.yml
docs/: EXTENSION_HOST_POC_PLAN.md  SMART_MODE_COMPLETION_REPORT.md  WASM_EXTENSION_STANDARD.md  debug-architecture.md  github-oauth.md  plugin-system-design.md
docs/design/: gitlens-incomplete-features.md  mode-switching.md  phase2-smart-mode.md
electron/: extension-host-manager.ts  extension-host.ts  main.ts  preload.ts
electron/extension-host/: loader.ts  vscode-api-stub.ts  vscode.ts
electron/services/: commitAnalysisService.ts  extensionService.ts  gitService.ts  githubService.ts  intelligenceService.ts  memoryMonitorService.ts
logos-lang/: Cargo.toml
logos-lang/crates/logos-refactor/: Cargo.toml
logos-lang/crates/logos-refactor/src/: analysis.rs  extract_method.rs  extract_variable.rs  lib.rs  safe_delete.rs
patches/: @mdui+shared+1.0.8.patch  mdui+2.1.4.patch
scripts/: update-docs.sh
shared/debug/: types.ts
src/: App.vue  main.ts
src/components/: FeedbackReportDialog.vue
src/logos/: index.ts
src/stores/: blame.ts  callHierarchy.ts  commitAnalysis.ts  debug.ts  extensions.ts  (+9 more)
(+89 files in other folders)
